# spb-ai-v1

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  UBIQUITOUS_LANGUAGE.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml
apps/ai-service/: .env.example  Dockerfile  cloudbuild.yaml  pyproject.toml
apps/ai-service/app/: main.py
apps/ai-service/app/modules/: __init__.py  config.py  embeddings.py  explanations.py  ingestion.py  ingestion_worker.py  match_detail.py  matching.py  matching_scoring.py  matching_signals.py  matching_worker.py  repositories.py  retrieval.py  runtime.py  scanner.py  sentry.py  storage.py  supabase_repository.py
apps/ai-service/tests/: test_config.py  test_explanations.py  test_health.py  test_ingestion.py  test_local_validation_flow.py  test_matching_signals.py  test_matching_worker.py  test_scanner.py  test_sentry.py  test_supabase_repository.py
apps/ai-service/tests/fixtures/: matching_eval.json
apps/ai-service/tests/modules/: test_vertex_adapters.py
apps/api/: .env.example  Dockerfile  package.json  (+1 more)
docs/: agent-harness.md  mcp-tooling.md  project-build-plan.md  project-knowledge-base.md  step-10-matching-implementation-plan.md  step-10-matching-smoke-checklist.md  step-11-intro-requests-implementation-plan.md  step-12-match-detail-implementation-plan.md  step-12-match-detail-smoke-checklist.md  step-13-billing-usage-implementation-plan.md  step-14-notifications-email-implementation-plan.md
scripts/: check-harness.mjs
supabase/: config.toml  seed.sql
(+440 files in other folders)
